fixing "Content in layout is not responsive #174"

--- a/polymer-ui/styles.css
+++ b/polymer-ui/styles.css
@@ -10,6 +10,8 @@ paper-card {
 
 paper-checkbox {
     margin-bottom: 10px;
+    display: flex !important;
+    white-space: normal !important;
 }
     paper-button {
 
